Fixed another async teleportation bug, Migrated many config options to individual files in a settings folder to be more organized., Added a commands setting to the murder-bounty configuration section to run Action Commands when a player is murdered., Backups are now compressed to zip files & spaced more evenly, Patched a glitch that did not remove parts of a bounty when it expired.